--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			    <li style="color: #ff6f00;">We want privacy to everyone and Orange Hat will be both powerful and easy to use.</li>
                         </ul>
 
-                        <p style="color: #ff6f00;">Orange Hat is work in progress and not avaliable anywhere at the moment. When Orange Hat will be released you can find it from my <a style="color: #b96966;" href="https://github.com/MrVeink/OrangeHat">GitHub page.</a></p>
+                        <p style="color: #ff6f00;">Orange Hat is work in progress and not avaliable anywhere at the moment. When Orange Hat will be released you can find it from my <a style="color: #b96966;" href="https://github.com/OrangeHatOS/index">GitHub page.</a></p>
 
                         <section>
                             <h3 style="color: #ff6f00;" id="sites-to-visit">Sites to visit:<a class="anchorjs-link " href="#sites-to-visit" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h3>
@@ -76,7 +76,7 @@
                                 <div class="col-md-6">
                                     <ul>
                                         <li style="color: #ff6f00;">
-                                            <h4 style="color: #ff6f00;" id="orange-hat-github-page"><a style="color: #b96966;" href="https://github.com/MrVeink/OrangeHat">Orange Hat GitHub Page</a><a class="anchorjs-link " href="#orange-hat-github-page" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h4>
+                                            <h4 style="color: #ff6f00;" id="orange-hat-github-page"><a style="color: #b96966;" href="https://github.com/OrangeHatOS/index">Orange Hat GitHub Page</a><a class="anchorjs-link " href="#orange-hat-github-page" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h4>
                                             <p style="color: #ff6f00;">This is where Orange Hat will be released and distrubuted. The link may change in the future.</p>
                                         </li>
                                     </ul>
