--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                 <div class="col-md-6">
                                     <ul>
                                         <li style="color: #ff6f00;">
-                                            <h4 style="color: #ff6f00;" id="orange-hat-github-page"><a style="color: #b96966;" href="https://github.com/OrangeHatOS/index">Orange Hat GitHub Page</a><a class="anchorjs-link " href="#orange-hat-github-page" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h4>
-                                            <p style="color: #ff6f00;">This is where Orange Hat will be released and distrubuted. The link may change in the future.</p>
+                                            <h4 style="color: #ff6f00;" id="orangehat-website-repo"><a style="color: #b96966;" href="https://github.com/OrangeHatOS/index">OrangeHat Website repo</a><a class="anchorjs-link " href="#orange-hat-github-page" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h4>
+                                            <p style="color: #ff6f00;">This is the repository of this website. This webise runs from the html branch.</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -88,6 +88,15 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <div class="col-md-6">
+                                    <ul>
+                                        <li style="color: #ff6f00;">
+                                            <h4 style="color: #ff6f00;" id="orangehat-repos"><a style="color: #b96966;" href="https://github.com/OrangeHatOS">OrangeHat Repositories</a><a class="anchorjs-link " href="#orangehat-repos>
+                                            <p style="color: #ff6f00;">Here's all the OrangeHat repositories. More will come when we progress.</p>
+                                        </li>
+                                    </ul>
+                                </div>
+
                             </div>
                         </section>
 
