--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <div class="col-md-6">
                                     <ul>
                                         <li style="color: #ff6f00;">
-                                            <h4 style="color: #ff6f00;" id="orangehat-repos"><a style="color: #b96966;" href="https://github.com/OrangeHatOS">OrangeHat Repositories</a><a class="anchorjs-link " href="#orangehat-repos>
+                                            <h4 style="color: #ff6f00;" id="orangehat-repos"><a style="color: #b96966;" href="https://github.com/OrangeHatOS">OrangeHat Repositories</a><a class="anchorjs-link " href="#orangehat-repos"></a></h4>
                                             <p style="color: #ff6f00;">Here's all the OrangeHat repositories. More will come when we progress.</p>
                                         </li>
                                     </ul>
