fixed the link to patreon

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <div class="col-md-6">
                                     <ul>
                                         <li style="color: #ff6f00;">
-                                            <h4 style="color: #ff6f00;" id="orange-hat-patreon-page"><a style="color: #b96966;" href="https://www.patreon.com/OrangeHatLinux">Orange Hat Patreon Page</a><a class="anchorjs-link " href="#orange-hat-patreon-page" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h4>
+                                            <h4 style="color: #ff6f00;" id="orange-hat-patreon-page"><a style="color: #b96966;" href="https://www.patreon.com/OrangeHatOS">Orange Hat Patreon Page</a><a class="anchorjs-link " href="#orange-hat-patreon-page" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h4>
                                             <p style="color: #ff6f00;">This is the official Patreon of the project. You can donate if you want to, but no need to. If you donate a little more you get special privileges on my Discord Server and Early Access to the OS.</p>
                                         </li>
                                     </ul>
