new website release

--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Operating System Developers, Linux Developers">
     <meta name="description" content="">
-    <meta name="page_type" content="index">
+    <meta name="page_type" content="home">
     <title>Home</title>
     <link rel="stylesheet" href="page.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
@@ -29,7 +29,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-overlap-transparent"><header class="u-clearfix u-header u-palette-2-base u-header" id="sec-2485"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-overlap-transparent"><header class="u-clearfix u-header u-palette-2-base u-header" id="sec-2485"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" data-page-id="1062122974" class="u-image u-logo u-image-1" data-image-width="962" data-image-height="326" title="Home">
           <img src="images/bowler-954627text.png" class="u-logo-image u-logo-image-1" data-image-width="129">
         </a>
