Fixed a typo in OH-Linux.html

--- a/OH-Linux.html
+++ b/OH-Linux.html
@@ -64,7 +64,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1600" data-image-height="1188" id="sec-bb06">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-large-text u-text u-text-variant u-text-1">OrangeHat Linux is not public at the moment. Sorry for the inconviniance.</p>
+        <p class="u-large-text u-text u-text-variant u-text-1">OrangeHat Linux is not public at the moment. Sorry for the inconvenience.</p>
       </div>
     </section>
     
