Redid the text to make it sound better.

--- a/About.html
+++ b/About.html
@@ -65,7 +65,7 @@
     <section class="u-align-center u-clearfix u-palette-2-base u-section-1" id="sec-ea53">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h5 class="u-text u-text-1">about us</h5>
-        <h1 class="u-custom-font u-text u-text-2">We are just a tiny group of developers who met on different Discord servers. We don't get paid for this, but we do it because it's fun. Also we want to spread the FOSS philosophy, without pushing GNU down your throth. We also want to give life to old platforms, but about that I won't tell now. ;)</h1>
+        <h1 class="u-custom-font u-text u-text-2">We're just a tiny group of developers who met on different Discord servers. We don't get paid for this, but we do it because it's fun. We alos want to spread the FOSS philosophy, without pushing GNU down your throat. We want to give life to old platforms, but I won't tell you more about that yet. ;)</h1>
       </div>
     </section>
     
